--- a/divpuzzle上級編/style.css
+++ b/divpuzzle上級編/style.css
@@ -21,28 +21,15 @@ display: flex;
   float: right;
   top: 20px;
   right: 20px;
-  width: 160px;
-  height: 60px;
+  padding: 10px;
   background: #ffffff
 }
-.purple1--box{
+.purple--box {
   width: 40px;
   height: 40px;
-  margin: 10px;
   float: left;
   background: #cc00db;
 }
-.purple2--box{
-  width: 40px;
-  height: 40px;
-  margin: 10px 0;
-  float: left;
-  background: #cc00db;
-}
-.purple3--box{
-  width: 40px;
-  height: 40px;
-  margin: 10px;
-  float: left;
-  background: #cc00db;
+.purple--main :nth-child(2){
+  margin: 0 10px;
 }
